--- a/hola_mundo.html
+++ b/hola_mundo.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>!
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>
-            Hola Mundo
+            Primer Ejercicio
         </title>
     </head>
     <body>
-        Hola mundo practica
+        <h1>Contenido principal</h1>
+        <h2>Contenido secundario</h2>
+        <h3>Contenido alternativo</h3>
+            <p>Contenido normal</p>
+        <a href="www.misiontic.gov.co">Pagina de Mintic</a>
+        <ol>
+            <li>Apariencia</li>
+            <li>Sentiminetos</li>
+            <li>Aspiraciones</li>
+        </ol>
+        <ul>
+            <li>Deseos</li>
+            <li>Tentaciones</li>
+            <li>Sueños</li>
+        </ul>
+        <br>
+        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.gq.com.mx%2Fphotos%2F5cbf8c609277d8857be23c04%2F16%3A9%2Fw_2560%252Cc_limit%2FGettyImages-956550532.jpg&imgrefurl=https%3A%2F%2Fwww.gq.com.mx%2Festilo-de-vida%2Farticulo%2F10-tecnologias-del-futuro-que-cambiaran-la-faz-del-planeta&tbnid=fJdquPfcHUP9sM&vet=12ahUKEwin9qbYkNn6AhUi81MKHVFOAqUQMygKegUIARD1AQ..i&docid=bT3ZFlBzqSJMeM&w=2560&h=1440&q=Tecnologias&client=opera-gx&ved=2ahUKEwin9qbYkNn6AhUi81MKHVFOAqUQMygKegUIARD1AQ">
     </body>
 </html>
